--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A clone of the social network created by Felipe Deschamps.",
   "main": "index.js",
   "scripts": {
+    "dev": "next dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
