--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "jest": "^29.6.2",
     "postcss": "^8.2.13",
     "prettier": "^3.4.2",
     "tailwindcss": "^2.1.2"
