atualiza configurações do ambiente de desenvolvimento e remove .env.development do .gitignore

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,5 @@
-POSTGRES_HOST=ep-dry-band-a4p65vg9-pooler.us-east-1.aws.neon.tech
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=neondb_owner
-POSTGRES_DB=neondb
-POSTGRES_PASSWORD=npg_cvh0nVI5QKZB
-POSTGRES_SSL=true
+POSTGRES_USER=local_user
+POSTGRES_DB=local_db
+POSTGRES_PASSWORD=local_password
